修改微信分享图片

--- a/garbage/src/main/resources/templates/index.html
+++ b/garbage/src/main/resources/templates/index.html
@@ -11,6 +11,10 @@
     <script type="text/javascript" th:src="@{/index.js}"></script>
 </head>
 <body>
+
+<div style="display:none;">
+    <img th:src="@{/wxshare.jpg}" />
+</div>
 <div id="main" th:style="'background:#ffffff url('+@{/f_bg.jpg}+') repeat-x left bottom;padding-bottom: 10px;'">
     <div class="logo"><img th:src="@{/logo.jpg}" alt=""/></div>
     <div class="title" style="color:#fff;">直接查询</div>
